src/test/ui/parser/lex-bad-char-literals-1.stderr
error: numeric character escape is too short
  --> $DIR/lex-bad-char-literals-1.rs:2:6
   |
LL |     '\x1'
   |      ^^^

error: numeric character escape is too short
  --> $DIR/lex-bad-char-literals-1.rs:6:6
   |
LL |     "\x1"
   |      ^^^

error: unknown character escape: `\u{25cf}`
  --> $DIR/lex-bad-char-literals-1.rs:10:7
   |
LL |     '\●'
   |       ^ unknown character escape
   |
   = help: for more information, visit <https://static.rust-lang.org/doc/master/reference.html#literals>

error: unknown character escape: `\u{25cf}`
  --> $DIR/lex-bad-char-literals-1.rs:14:7
   |
LL |     "\●"
   |       ^ unknown character escape
   |
   = help: for more information, visit <https://static.rust-lang.org/doc/master/reference.html#literals>

error: aborting due to 4 previous errors

